# Bachelorthesis_PoC

./: .dockerignore  .gitignore  Dockerfile  README.md  cli.py  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
poc/: __init__.py
poc/helpers/: helpers.py
poc/models/: auth.py
poc/routes/: auth.py  main.py
poc/service/: user.py
traefik-config/: README.md  starter.sh
